feat: add getGroupChat endpoint
