# internal/controller/http/v1/message.go
@@ -7,6 +7,7 @@ import (
 	"github.com/lintangbs/chat-be/internal/entity"
 	api "github.com/lintangbs/chat-be/internal/middleware"
 	"github.com/lintangbs/chat-be/internal/usecase"
+	"github.com/lintangbs/chat-be/internal/usecase/repo"
 	"github.com/lintangbs/chat-be/internal/util/jwt"
 	"github.com/lintangbs/chat-be/pkg/logger"
 	"gorm.io/gorm"
@@ -27,6 +28,7 @@ func NewMessageRoutes(handler *gin.RouterGroup, m usecase.Message, l logger.Inte
 	{
 		h.GET("", r.getMessages)
 		h.GET("/friend", r.getMessagesByFriend)
+		h.GET("/group", r.getMessagesByGroupChat)
 	}
 
 }
@@ -103,7 +105,7 @@ func (r *messageRoutes) getMessages(c *gin.Context) {
 	c.JSON(http.StatusOK, res)
 }
 
-type getMessagesByFriendRespone struct {
+type getMessagesByFriendResponse struct {
 	Messages []privateChatMessage `json:"message"`
 }
 
@@ -115,7 +117,7 @@ type getMessagesByFriendRespone struct {
 // @Produce     json
 // @Security OAuth2Application
 // @Param        friendUsername    query     string  false  "friendName search by friendUsername"
-// @Success     200 {object} getMessagesByFriendRespone
+// @Success     200 {object} getMessagesByFriendResponse
 // @Failure     400 {object} response
 // @Failure     500 {object} response
 // @Router      /v1/messages/friend [get]
@@ -162,9 +164,83 @@ func (r *messageRoutes) getMessagesByFriend(c *gin.Context) {
 		})
 	}
 
-	res := getMessagesByFriendRespone{
+	res := getMessagesByFriendResponse{
 		Messages: pcs,
 	}
 
+	c.JSON(http.StatusOK, res)
+}
+
+type groupChatMessage struct {
+	GroupId   uuid.UUID `json:"id"`
+	MessageId uint64    `json:"message_id"`
+	UserId    uuid.UUID `json:"user_id"`
+	Content   string    `json:"content"`
+	CreatedAt time.Time `json:"created_at,omitempty"`
+	UpdatedAt time.Time `json:"updated_at,omitempty"`
+}
+
+type getMessagesByGroupName struct {
+	Messages []groupChatMessage `json:"messages"`
+}
+
+// @Summary     Get user messages by group Chat
+// @Description    Get user messages by group Chat
+// @ID          getMessagesByGroupChat
+// @Tags  	    messages
+// @Accept      json
+// @Produce     json
+// @Security OAuth2Application
+// @Param        groupName    query     string  false  "groupName search by group"
+// @Success     200 {object} getMessagesByGroupName
+// @Failure     400 {object} response
+// @Failure     500 {object} response
+// @Router      /v1/messages/group [get]
+// Author: https://github.com/lintang-b-s
+func (r *messageRoutes) getMessagesByGroupChat(c *gin.Context) {
+	groupName := c.Query("groupName")
+	authPayload := c.MustGet(api.AuthorizationPayloadKey).(*jwt.Payload)
+
+	if groupName == "" {
+		ErrorResponse(c, http.StatusBadRequest, "invalid request body")
+		return
+	}
+
+	msgs, err := r.m.GetMessagesByGroupChat(
+		c.Request.Context(),
+		entity.GroupChatMsgRequest{
+			GroupName: groupName,
+			UserName:  authPayload.Username,
+		},
+	)
+
+	if err != nil {
+		unwrapedErr := errors.Unwrap(err)
+		errRepo := errors.Unwrap(unwrapedErr)
+		if errRepo == gorm.ErrRecordNotFound || errRepo == repo.UserNotMemberErr {
+			ErrorResponse(c, http.StatusBadRequest, errRepo.Error())
+			return
+		}
+
+		r.l.Error("http - v1- getMessages")
+		ErrorResponse(c, http.StatusInternalServerError, "getMessages service problems: "+err.Error())
+		return
+	}
+
+	var gcMsgs []groupChatMessage
+	for _, msg := range msgs.Messages {
+		gcMsgs = append(gcMsgs, groupChatMessage{
+			GroupId:   msg.GroupId,
+			MessageId: msg.MessageId,
+			UserId:    msg.UserId,
+			Content:   msg.Content,
+			CreatedAt: msg.CreatedAt,
+			UpdatedAt: msg.UpdatedAt,
+		})
+	}
+
+	res := getMessagesByGroupName{
+		Messages: gcMsgs,
+	}
 	c.JSON(http.StatusOK, res)
 }
